--- a/shared/styles/globals.css
+++ b/shared/styles/globals.css
@@ -1,78 +1,93 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap");
-
 @import "tailwindcss";
 @import "tw-animate-css";
+
 @custom-variant dark (&:is(.dark *));
 
-:root {
-  --background: #f5f5f5;
-  --foreground: #171717;
-
-  --primary: hsl(0 0% 9%);
-  --primary-foreground: hsl(0 0% 98%);
-  --secondary: hsl(0 0% 96.1%);
-  --secondary-foreground: hsl(0 0% 9%);
-
-  --muted: hsl(0 0% 96.1%);
-  --muted-foreground: hsl(0 0% 45.1%);
-
-  --accent: hsl(0 0% 96.1%);
-  --accent-foreground: hsl(0 0% 9%);
-
-  --container-border: hsl(0 0% 89.8%);
-  --border: hsl(0 0% 89.8%);
-
-  --input: hsl(0 0% 89.8%);
-  --ring: hsl(0 0% 3.9%);
-  --radius: 0.5rem;
+@font-face {
+  font-family: "Inter";
+  src: url("../fonts/Inter-VariableFont_opsz\,wght.ttf");
 }
-.dark {
+
+:root {
   --background: #171717;
   --foreground: #f5f5f5;
 
   --primary: #d89236;
-  --primary-foreground: #fad5a4;
-
-  --secondary: hsl(0 0% 96.1%);
-  --secondary-foreground: hsl(0 0% 9%);
+  --primary-lighter: #fad5a4;
 
   --muted: #c1c1c1;
-  --muted-foreground: #c1c1c1;
 
   --accent: #363636;
   --accent-foreground: #f5f5f5;
 
   --container-background: #1d1d1d;
   --border: #2e2e2e;
+  --ring: hsl(0 0% 3.9%);
+  --radius: 0.5rem;
+}
+.dark {
+  --background: 0, 0%, 9%;
+
+  --foreground: 0, 0%, 96%;
+  --muted-foreground: 0, 0%, 76%;
+
+  --primary: 34, 68%, 53%;
+  --primary-lighter: 34, 90%, 81%;
+  --primary-hover-background: 35, 23%, 15%;
+
+  --container-background: 0, 0%, 11%;
+  --container-border: 0, 0%, 18%;
+  --container-inner-item-background: 0, 0%, 17%;
+
+  --container-ring: 0, 0%, 3.9%;
 }
 
-@theme inline {
-  --font-sans: "Inter";
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --color-card: var(--card);
-  --color-card-foreground: var(--card-foreground);
-  --color-popover: var(--popover);
-  --color-popover-foreground: var(--popover-foreground);
-  --color-primary: var(--primary);
-  --color-primary-foreground: var(--primary-foreground);
-  --color-secondary: var(--secondary);
-  --color-secondary-foreground: var(--secondary-foreground);
-  --color-muted: var(--muted);
-  --color-muted-foreground: var(--muted-foreground);
-  --color-accent: var(--accent);
-  --color-accent-foreground: var(--accent-foreground);
-  --color-destructive: var(--destructive);
-  --color-destructive-foreground: var(--destructive-foreground);
+@theme {
+  --font-*: initial;
+  --font-sans:
+    Inter, ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol",
+    "Noto Color Emoji";
 
-  --color-container-background: var(--container-background);
-  --color-border: var(--border);
+  --color-background: hsl(var(--background));
 
-  --color-input: var(--input);
+  --color-foreground: hsl(var(--foreground));
+  --color-muted-foreground: hsl(var(--muted-foreground));
+
+  --color-primary: hsl(var(--primary));
+  --color-primary-hover-background: hsl(var(--primary-hover-background));
+  --color-primary-lighter: hsl(var(--primary-lighter));
+
+  --color-container-background: hsl(var(--container-background));
+  --color-container-border: hsl(var(--container-border));
+  --color-container-inner-item-background: hsl(var(--container-inner-item-background));
+
+  --color-container-ring: hsl(var(--container-ring));
+
+  --radius-lg: var(--radius);
+  --radius-md: calc(var(--radius) - 2px);
+  --radius-sm: calc(var(--radius) - 4px);
+}
+
+/*
+  The default border color has changed to `currentcolor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: var(--color-gray-200, currentcolor);
+  }
 }
 
 * {
-  @apply border-border font-sans outline-primary/50 scroll-smooth;
+  @apply border-container-border font-sans outline-primary/50 scroll-smooth;
 }
 body {
   @apply bg-background text-foreground text-sm min-w-[400px] m-0 p-0 min-h-dvh overflow-x-auto;
@@ -80,59 +95,37 @@ body {
 
 @layer components {
   article {
-    @apply text-[0.965rem] leading-relaxed;
-  }
-  article h1 {
-    @apply text-3xl font-semibold tracking-tight mt-6;
-  }
-  article h2 {
-    @apply text-xl font-semibold tracking-tight mt-6;
-  }
-  article h3 {
-    @apply text-lg font-semibold tracking-tight mt-6;
-  }
-  article h4 {
-    @apply font-semibold tracking-tight mt-6;
-  }
-  article p {
-    @apply m-0 p-0 my-3 text-pretty dark:text-muted-foreground;
-  }
-  article h1 a,
-  article h2 a,
-  article h3 a,
-  article h4 a {
-    @apply text-foreground no-underline;
-  }
-  article ul,
-  article ol {
-    @apply px-[2rem] my-3;
-  }
-  article ul {
-    @apply list-[square];
-  }
-  article ol {
-    @apply list-decimal;
-  }
-  article blockquote {
-    @apply border border-l-[0.4rem] bg-container-background rounded-md my-3 p-3;
+    @apply text-[0.965rem] leading-relaxed flex flex-col items-start justify-start gap-4 [&>*]:w-full;
   }
   article a {
-    @apply text-[#d89236] hover:underline;
+    @apply text-primary hover:text-primary-lighter transition-colors;
+  }
+  article h1 {
+    @apply text-3xl font-medium tracking-tight [&_a]:text-foreground [&_a]:no-underline;
+  }
+  article h2 {
+    @apply text-xl font-medium tracking-tight mt-4 [&_a]:text-foreground [&_a]:no-underline;
+  }
+  article h3 {
+    @apply text-lg font-medium tracking-tight mt-4 [&_a]:text-foreground [&_a]:no-underline;
+  }
+  article h4 {
+    @apply font-medium tracking-tight mt-4;
+  }
+  article p {
+    @apply m-0 p-0 text-pretty dark:text-muted-foreground;
+  }
+  article ul {
+    @apply list-[square] px-6;
+  }
+  article ol {
+    @apply list-decimal px-6;
   }
   article ul li,
   article ol li {
-    @apply dark:text-muted-foreground marker:text-foreground;
+    @apply text-muted-foreground marker:text-foreground [&>strong]:text-foreground [&>strong]:font-medium;
   }
-  article ul li strong,
-  article ol li strong {
-    @apply text-foreground;
-  }
-  article ul li p,
-  article ol li p,
-  article blockquote p {
-    @apply indent-0 m-0;
-  }
-  article > h1 {
-    @apply mt-0;
+  article blockquote {
+    @apply border border-l-[0.4rem] bg-container-background rounded-md p-3;
   }
 }
