--- a/shared/styles/globals.css
+++ b/shared/styles/globals.css
@@ -9,20 +9,20 @@
 }
 
 :root {
-  --background: #171717;
-  --foreground: #f5f5f5;
+  --background: 0, 0%, 9%;
 
-  --primary: #d89236;
-  --primary-lighter: #fad5a4;
+  --foreground: 0, 0%, 96%;
+  --muted-foreground: 0, 0%, 76%;
 
-  --muted: #c1c1c1;
+  --primary: 34, 68%, 53%;
+  --primary-lighter: 34, 90%, 81%;
+  --primary-hover-background: 35, 23%, 15%;
 
-  --accent: #363636;
-  --accent-foreground: #f5f5f5;
+  --container-background: 0, 0%, 11%;
+  --container-border: 0, 0%, 18%;
+  --container-inner-item-background: 0, 0%, 17%;
 
-  --container-background: #1d1d1d;
-  --border: #2e2e2e;
-  --ring: hsl(0 0% 3.9%);
+  --container-ring: 0, 0%, 3.9%;
   --radius: 0.5rem;
 }
 .dark {
